--- a/colle_tMedecine/colle_tMedecine/colle_tMedecine.csproj
+++ b/colle_tMedecine/colle_tMedecine/colle_tMedecine.csproj
@@ -59,16 +59,13 @@
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModel\AllMedicViewModel.cs" />
     <Compile Include="ViewModel\AllPatientViewModel.cs" />
+    <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MedicViewModel.cs" />
     <Compile Include="ViewModel\NewMedicViewModel.cs" />
     <Compile Include="ViewModel\NewPatientViewModel.cs" />
     <Compile Include="ViewModel\PatientViewModel.cs" />
     <Compile Include="WindowCloseBehaviour.cs" />
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -76,10 +73,6 @@
     <Compile Include="Model\Observation.cs" />
     <Compile Include="Model\Patient.cs" />
     <Compile Include="Model\User.cs" />
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
