--- a/colle_tMedecine/colle_tMedecine/colle_tMedecine.csproj
+++ b/colle_tMedecine/colle_tMedecine/colle_tMedecine.csproj
@@ -57,19 +57,23 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="RelayCommand.cs" />
-    <Compile Include="ViewModel\AllMedicViewModel.cs" />
-    <Compile Include="ViewModel\AllPatientViewModel.cs" />
+    <Compile Include="ViewModel\MainWindow.cs" />
+    <Compile Include="ViewModel\PersonnelViewModel.cs" />
+    <Compile Include="ViewModel\patientsViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
-    <Compile Include="ViewModel\MedicViewModel.cs" />
-    <Compile Include="ViewModel\NewMedicViewModel.cs" />
+    <Compile Include="ViewModel\Nouveau_PersonnelViewModel.cs" />
+    <Compile Include="ViewModel\Nouveau_patientViewModel.cs" />
     <Compile Include="ViewModel\NewPatientViewModel.cs" />
-    <Compile Include="ViewModel\PatientViewModel.cs" />
+    <Compile Include="ViewModel\Fiche_PatientViewModel.cs" />
     <Compile Include="View\Fiche_Patient.xaml.cs">
       <DependentUpon>Fiche_Patient.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\MainWindow.xaml.cs">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
@@ -101,6 +105,10 @@
     <Page Include="View\Login.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Menu.xaml">
       <Generator>MSBuild:Compile</Generator>
