--- a/colle_tMedecine/colle_tMedecine/colle_tMedecine.csproj
+++ b/colle_tMedecine/colle_tMedecine/colle_tMedecine.csproj
@@ -58,6 +58,7 @@
     </ApplicationDefinition>
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModel\MainWindow.cs" />
+    <Compile Include="ViewModel\MenuViewModel.cs" />
     <Compile Include="ViewModel\PersonnelViewModel.cs" />
     <Compile Include="ViewModel\patientsViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
