--- a/colle_tMedecine/colle_tMedecine/colle_tMedecine.csproj
+++ b/colle_tMedecine/colle_tMedecine/colle_tMedecine.csproj
@@ -100,6 +100,9 @@
     <Compile Include="View\Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\NewObservation.xaml.cs">
+      <DependentUpon>NewObservation.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Nouveau_patient.xaml.cs">
       <DependentUpon>Nouveau_patient.xaml</DependentUpon>
     </Compile>
@@ -135,6 +138,10 @@
     <Page Include="View\Menu.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\NewObservation.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Nouveau_patient.xaml">
       <Generator>MSBuild:Compile</Generator>
