--- a/colle_tMedecine/colle_tMedecine/colle_tMedecine.csproj
+++ b/colle_tMedecine/colle_tMedecine/colle_tMedecine.csproj
@@ -60,6 +60,7 @@
     </ApplicationDefinition>
     <Compile Include="Converter\BoolToVisibleOrHidden .cs" />
     <Compile Include="Converter\ConvertByteArrayToImage.cs" />
+    <Compile Include="Helper\BindingHelper.cs" />
     <Compile Include="Helper\PasswordHelper.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Service References\ServiceObservation\Reference.cs">
