--- a/colle_tMedecine/colle_tMedecine/app.config
+++ b/colle_tMedecine/colle_tMedecine/app.config
@@ -6,11 +6,11 @@
                 <binding name="BasicHttpBinding_IServicePatient" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="10000000" maxBufferPoolSize="524288" maxReceivedMessageSize="10000000"
+                    maxBufferSize="2147483647" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"
                     messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
                     useDefaultWebProxy="true">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="10000000"
-                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <readerQuotas maxDepth="32" maxStringContentLength="2147483647" maxArrayLength="2147483647"
+                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
                     <security mode="None">
                         <transport clientCredentialType="None" proxyCredentialType="None"
                             realm="" />
@@ -20,11 +20,11 @@
                 <binding name="BasicHttpBinding_IServiceObservation" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="10000000" maxBufferPoolSize="524288" maxReceivedMessageSize="10000000"
+                    maxBufferSize="2147483647" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"
                     messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
                     useDefaultWebProxy="true">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="10000000"
-                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <readerQuotas maxDepth="32" maxStringContentLength="2147483647" maxArrayLength="2147483647"
+                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
                     <security mode="None">
                         <transport clientCredentialType="None" proxyCredentialType="None"
                             realm="" />
@@ -34,11 +34,11 @@
                 <binding name="BasicHttpBinding_IServiceUser" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="10000000" maxBufferPoolSize="524288" maxReceivedMessageSize="10000000"
+                    maxBufferSize="2147483647" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"
                     messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
                     useDefaultWebProxy="true">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="10000000"
-                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <readerQuotas maxDepth="32" maxStringContentLength="2147483647" maxArrayLength="2147483647"
+                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
                     <security mode="None">
                         <transport clientCredentialType="None" proxyCredentialType="None"
                             realm="" />
