Modifying app.config for local

--- a/colle_tMedecine/colle_tMedecine/app.config
+++ b/colle_tMedecine/colle_tMedecine/app.config
@@ -48,13 +48,13 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://windows.kasiamac.com/Wcf-Medical_deploy/ServicePatient.svc"
+            <endpoint address="http://localhost:1336/ServicePatient.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServicePatient"
                 contract="ServicePatient.IServicePatient" name="BasicHttpBinding_IServicePatient" />
-            <endpoint address="http://windows.kasiamac.com/Wcf-Medical_deploy/ServiceObservation.svc"
+            <endpoint address="http://localhost:1336/ServiceObservation.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceObservation"
                 contract="ServiceObservation.IServiceObservation" name="BasicHttpBinding_IServiceObservation" />
-            <endpoint address="http://windows.kasiamac.com/Wcf-Medical_deploy/ServiceUser.svc"
+            <endpoint address="http://localhost:1336/ServiceUser.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceUser"
                 contract="ServiceUser.IServiceUser" name="BasicHttpBinding_IServiceUser" />
         </client>
