--- a/colle_tMedecine/colle_tMedecine/app.config
+++ b/colle_tMedecine/colle_tMedecine/app.config
@@ -6,11 +6,11 @@
                 <binding name="BasicHttpBinding_IServicePatient" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="2147483647" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"
-                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-                    useDefaultWebProxy="true">
-                    <readerQuotas maxDepth="32" maxStringContentLength="2147483647" maxArrayLength="2147483647"
-                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+                    maxBufferSize="2147483647" maxBufferPoolSize="2147483647"
+                    maxReceivedMessageSize="2147483647" messageEncoding="Text"
+                    textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="2147483647"
+                        maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
                     <security mode="None">
                         <transport clientCredentialType="None" proxyCredentialType="None"
                             realm="" />
@@ -20,11 +20,11 @@
                 <binding name="BasicHttpBinding_IServiceObservation" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="2147483647" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"
-                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-                    useDefaultWebProxy="true">
-                    <readerQuotas maxDepth="32" maxStringContentLength="2147483647" maxArrayLength="2147483647"
-                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+                    maxBufferSize="2147483647" maxBufferPoolSize="2147483647"
+                    maxReceivedMessageSize="2147483647" messageEncoding="Text"
+                    textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="2147483647"
+                        maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
                     <security mode="None">
                         <transport clientCredentialType="None" proxyCredentialType="None"
                             realm="" />
@@ -34,11 +34,11 @@
                 <binding name="BasicHttpBinding_IServiceUser" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="2147483647" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"
-                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-                    useDefaultWebProxy="true">
-                    <readerQuotas maxDepth="32" maxStringContentLength="2147483647" maxArrayLength="2147483647"
-                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+                    maxBufferSize="2147483647" maxBufferPoolSize="2147483647"
+                    maxReceivedMessageSize="2147483647" messageEncoding="Text"
+                    textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="2147483647"
+                        maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
                     <security mode="None">
                         <transport clientCredentialType="None" proxyCredentialType="None"
                             realm="" />
@@ -46,17 +46,39 @@
                     </security>
                 </binding>
             </basicHttpBinding>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IServiceLive" closeTimeout="00:01:00"
+                    openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+                    bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+                    maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                    messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <reliableSession ordered="true" inactivityTimeout="00:10:00" />
+                    <security mode="Message">
+                        <message clientCredentialType="Windows" negotiateServiceCredential="true"
+                            algorithmSuite="Default" />
+                    </security>
+                </binding>
+            </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:1336/ServicePatient.svc"
+            <endpoint address="http://localhost:3055/ServicePatient.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServicePatient"
                 contract="ServicePatient.IServicePatient" name="BasicHttpBinding_IServicePatient" />
-            <endpoint address="http://localhost:1336/ServiceObservation.svc"
+            <endpoint address="http://localhost:3055/ServiceObservation.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceObservation"
                 contract="ServiceObservation.IServiceObservation" name="BasicHttpBinding_IServiceObservation" />
-            <endpoint address="http://localhost:1336/ServiceUser.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceUser"
-                contract="ServiceUser.IServiceUser" name="BasicHttpBinding_IServiceUser" />
+            <endpoint address="http://localhost:3055/ServiceUser.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IServiceUser" contract="ServiceUser.IServiceUser"
+                name="BasicHttpBinding_IServiceUser" />
+            <endpoint address="http://localhost:3055/ServiceLive.svc" binding="wsDualHttpBinding"
+                bindingConfiguration="WSDualHttpBinding_IServiceLive" contract="ServiceLive.IServiceLive"
+                name="WSDualHttpBinding_IServiceLive">
+                <identity>
+                    <userPrincipalName value="T0to-PC\T0to" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
